--- a/css/style.css
+++ b/css/style.css
@@ -26,155 +26,186 @@ Grey dark 3: #999
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
-  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3); }
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+}
 
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: 400;
   line-height: 1.6;
   background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 100vh; }
+  min-height: 100vh;
+}
 
 /*============================== LOGO =================================*/
 .logo {
   height: 3.25rem;
   margin-left: 2rem;
-  transition: all .2s;
-  backface-visibility: hidden; }
-  .logo:hover {
-    transform: translateY(-3px); }
+  transition: all 0.2s;
+  backface-visibility: hidden;
+}
+.logo:hover {
+  transform: translateY(-3px);
+}
 
 /*============================== SEARCH =================================*/
 .search {
   flex: 0 0 40%;
   display: flex;
   justify-content: center;
-  align-items: center; }
-  .search__input {
-    font-family: inherit;
-    font-size: inherit;
-    color: inherit;
-    background-color: var(--color-grey-light-2);
-    border: none;
-    padding: .7rem 2rem;
-    border-radius: 200px;
-    width: 90%;
-    transition: all .2s;
-    margin-right: -3.25rem;
-    z-index: 1; }
-    .search__input:focus {
-      width: 100%;
-      outline: none;
-      background-color: var(--color-grey-light-3); }
-    .search__input::-webkit-input-placeholder, .search__input::-moz-placeholder {
-      font-weight: 100;
-      color: var(--color-grey-light-4); }
-  .search__input:focus + .search__button {
-    background-color: var(--color-grey-light-3); }
-  .search__button {
-    border: none;
-    z-index: 2; }
-  .search__icon {
-    height: 2rem;
-    width: 2rem;
-    fill: var(--color-grey-dark-3); }
+  align-items: center;
+}
+.search__input {
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  background-color: var(--color-grey-light-2);
+  border: none;
+  padding: 0.7rem 2rem;
+  border-radius: 200px;
+  width: 90%;
+  transition: all 0.2s;
+  margin-right: -3.25rem;
+  z-index: 1;
+}
+.search__input:focus {
+  width: 100%;
+  outline: none;
+  background-color: var(--color-grey-light-3);
+}
+.search__input::-webkit-input-placeholder, .search__input::-moz-placeholder {
+  font-weight: 100;
+  color: var(--color-grey-light-4);
+}
+.search__input:focus + .search__button {
+  background-color: var(--color-grey-light-3);
+}
+.search__button {
+  border: none;
+  z-index: 2;
+}
+.search__icon {
+  height: 2rem;
+  width: 2rem;
+  fill: var(--color-grey-dark-3);
+}
 
 /*============================== USER NAVIGATION =================================*/
 .user-nav {
   display: flex;
   align-self: stretch;
-  align-items: center; }
-  .user-nav > * {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    height: 100%;
-    padding: 0 2rem;
-    transition: all .2s; }
-  .user-nav > *:hover {
-    background-color: var(--color-grey-dark-2); }
-  .user-nav__icon-box {
-    position: relative; }
-    .user-nav__icon-box:hover .user-nav__icon {
-      fill: #fff; }
-  .user-nav__icon {
-    width: 2.25rem;
-    height: 2.25rem;
-    fill: var(--color-grey-dark-2); }
-  .user-nav__notifications {
-    font-size: .8rem;
-    height: 1.75rem;
-    width: 1.75rem;
-    border-radius: 100%;
-    background-color: var(--color-primary);
-    position: absolute;
-    top: 1.5rem;
-    right: 1.1rem;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-  .user-nav__user:hover {
-    color: #fff; }
-  .user-nav__user-photo {
-    height: 3.75rem;
-    border-radius: 50%;
-    margin-right: 1rem; }
+  align-items: center;
+}
+.user-nav > * {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  height: 100%;
+  padding: 0 2rem;
+  transition: all 0.2s;
+}
+.user-nav > *:hover {
+  background-color: var(--color-grey-dark-2);
+}
+.user-nav__icon-box {
+  position: relative;
+}
+.user-nav__icon-box:hover .user-nav__icon {
+  fill: #fff;
+}
+.user-nav__icon {
+  width: 2.25rem;
+  height: 2.25rem;
+  fill: var(--color-grey-dark-2);
+}
+.user-nav__notifications {
+  font-size: 0.8rem;
+  height: 1.75rem;
+  width: 1.75rem;
+  border-radius: 100%;
+  background-color: var(--color-primary);
+  position: absolute;
+  top: 1.5rem;
+  right: 1.1rem;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.user-nav__user:hover {
+  color: #fff;
+}
+.user-nav__user-photo {
+  height: 3.75rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
 
 /*============================== SIDE NAVIGATION =================================*/
 .side-nav {
   font-size: 1.4rem;
   list-style: none;
-  margin-top: 3.5rem; }
-  .side-nav__item {
-    transition: all .3s;
-    position: relative; }
-    .side-nav__item:not(:last-child) {
-      margin-bottom: .5rem; }
-    .side-nav__item::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 3px;
-      background-color: var(--color-primary);
-      transform: scaleY(0);
-      transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s; }
-    .side-nav__item:hover::before, .side-nav__item--active::before {
-      transform: scaleY(1);
-      width: 100%; }
-    .side-nav__item:active::before {
-      background-color: var(--color-primary-light); }
-  .side-nav__link:link, .side-nav__link:visited {
-    display: flex;
-    align-items: center;
-    padding: 1.5rem 3rem;
-    color: var(--color-grey-light-1);
-    text-decoration: none;
-    text-transform: uppercase;
-    position: relative;
-    z-index: 10; }
-  .side-nav__icon {
-    width: 1.75rem;
-    height: 1.75rem;
-    margin-right: 1rem;
-    fill: currentColor; }
+  margin-top: 3.5rem;
+}
+.side-nav__item {
+  transition: all 0.3s;
+  position: relative;
+}
+.side-nav__item:not(:last-child) {
+  margin-bottom: 0.5rem;
+}
+.side-nav__item::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 3px;
+  background-color: var(--color-primary);
+  transform: scaleY(0);
+  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s;
+}
+.side-nav__item:hover::before, .side-nav__item--active::before {
+  transform: scaleY(1);
+  width: 100%;
+}
+.side-nav__item:active::before {
+  background-color: var(--color-primary-light);
+}
+.side-nav__link:link, .side-nav__link:visited {
+  display: flex;
+  align-items: center;
+  padding: 1.5rem 3rem;
+  color: var(--color-grey-light-1);
+  text-decoration: none;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 10;
+}
+.side-nav__icon {
+  width: 1.75rem;
+  height: 1.75rem;
+  margin-right: 1rem;
+  fill: currentColor;
+}
 
 /*============================== LEGAL TEXT =================================*/
 .legal {
@@ -184,36 +215,137 @@ body {
   font-size: 1.2rem;
   color: var(--color-grey-light-4);
   text-align: center;
-  padding: 2.5rem; }
+  padding: 2.5rem;
+}
 
+/*============================== GALLERY =================================*/
+.gallery {
+  display: flex;
+}
+.gallery__photo {
+  width: 100%;
+  display: block;
+}
+
+/*============================== OVERVIEW =================================*/
+.overview {
+  display: flex;
+  align-items: center;
+  background: white;
+  border-bottom: 1px solid var(--color-grey-light-3);
+}
+.overview__heading {
+  font-size: 2.25rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 1.5rem;
+}
+.overview__stars {
+  margin-right: auto;
+  display: flex;
+}
+.overview__icon-start, .overview__icon-location {
+  width: 1.75rem;
+  height: 1.75rem;
+  fill: var(--color-primary);
+}
+.overview__location {
+  font-size: 1.2rem;
+  display: flex;
+  vertical-align: center;
+  margin-right: 1.5rem;
+}
+.overview__icon-location {
+  margin-right: 0.5rem;
+}
+.overview__rating {
+  align-self: stretch;
+  padding: 0 2.25rem;
+  background-color: var(--color-primary);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.overview__rating-average {
+  font-size: 2.25rem;
+  font-weight: 300;
+  margin-bottom: -0.5rem;
+}
+.overview__rating-count {
+  font-size: 0.8rem;
+  text-transform: uppercase;
+}
+
+/*============================== BUTTON INLINE =================================*/
+.button-inline {
+  border: none;
+  color: var(--color-primary);
+  font-size: inherit;
+  border-bottom: 1px solid currentColor;
+  background: transparent;
+  padding-bottom: 2px;
+  display: inline-block;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.button-inline:hover {
+  color: var(--color-grey-dark-1);
+}
+.button-inline:focus {
+  outline: none;
+  animation: pulsate 1s infinite;
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 .container {
   max-width: 120rem;
   margin: 8rem auto;
-  background-color: var(--color-grey-light-2);
+  background-color: var(--color-grey-light-1);
   box-shadow: var(--shadow-dark);
   border-radius: 3px;
   overflow: hidden;
-  min-height: 50rem; }
+  min-height: 50rem;
+}
 
 .header {
   font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-grey-light-2);
+  border-bottom: 1px solid var(--color-grey-light-2);
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+}
 
 .content {
-  display: flex; }
+  display: flex;
+}
 
 .sidebar {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   flex: 0 0 18%;
-  background-color: var(--color-grey-dark-1); }
+  background-color: var(--color-grey-dark-1);
+}
 
 .hotel-view {
   flex: 1;
-  min-height: 60rem; }
+  min-height: 60rem;
+}
+
+/*# sourceMappingURL=style.css.map */
