--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -210,3 +210,114 @@
     padding: 2.5rem;
 }
 
+/*============================== GALLERY =================================*/
+.gallery {
+    display: flex;
+
+    &__photo {
+        width: 100%;
+        display: block;
+    }
+}
+
+/*============================== OVERVIEW =================================*/
+.overview {
+    display: flex;
+    align-items: center;
+    background: white;
+    border-bottom: 1px solid var(--color-grey-light-3);
+
+    &__heading {
+        font-size: 2.25rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        padding: 1.5rem;
+
+    }
+
+    &__stars {
+        margin-right: auto;
+        display: flex;
+    }
+
+    &__icon-start,
+    &__icon-location {
+        width: 1.75rem;
+        height: 1.75rem;
+        fill: var(--color-primary);
+    }
+
+    &__location {
+        font-size: 1.2rem;
+        display: flex;
+        vertical-align: center;
+        margin-right: 1.5rem;
+    }
+
+    &__icon-location {
+        margin-right: .5rem;
+    }
+
+    &__rating {
+        align-self: stretch;
+        padding: 0 2.25rem;
+        background-color: var(--color-primary);
+        color: white;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        &-average {
+            font-size: 2.25rem;
+            font-weight: 300;
+            margin-bottom: -.5rem;
+        }
+    
+        &-count {
+            font-size: .8rem;
+            text-transform: uppercase;
+        }
+    }
+
+}
+/*============================== BUTTON INLINE =================================*/
+
+.button-inline {
+    border: none;
+    color: var(--color-primary);
+    font-size: inherit;
+    border-bottom: 1px solid currentColor;
+    background: transparent;
+    padding-bottom: 2px;
+    display: inline-block;
+    cursor: pointer;
+    transition: all .2s;
+
+    &:hover {
+        color: var(--color-grey-dark-1);
+    }
+
+    &:focus {
+        outline: none;
+        animation: pulsate 1s infinite;
+    }
+}
+
+
+@keyframes pulsate {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.05);
+        box-shadow: 0 1rem 4rem rgba(0,0,0,.25);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+
