--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,7 +1,7 @@
 .container {
     max-width: 120rem;
     margin: 8rem auto;
-    background-color: var(--color-grey-light-2);
+    background-color: var(--color-grey-light-1);
     box-shadow: var(--shadow-dark);
     border-radius: 3px;
     overflow: hidden;
@@ -13,7 +13,7 @@
     font-size: 1.4rem;
     height: 7rem;
     background-color: #fff;
-    border-bottom: var(--color-grey-light-2);
+    border-bottom: 1px solid var(--color-grey-light-2);
 
     display: flex;
     justify-content: space-between;
